fix showcase gap

--- a/project/static/scss/layout/showcase.scss
+++ b/project/static/scss/layout/showcase.scss
@@ -1,29 +1,30 @@
 .showcase {
-    width: 100%;
-    height: 1080px;
-    background: url('../img/lake.jpg') no-repeat center center/cover;
-    position: static;
-    top: 0;
-    bottom: 0;
-    z-index: -1;
+  width: 100%;
+  height: 1080px;
+  background: url('../img/lake.jpg') no-repeat center center/cover;
+  position: static;
+  margin-top: -1rem;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
+
 .showcase {
-    display: flex;
-    align-items: center;
-    color: #eee;
+  display: flex;
+  align-items: center;
+  color: #eee;
 
 
+  .showcase-content {
+    text-align: center;
+    padding: 1rem;
+    margin: auto;
+    min-width: 50%;
+    padding: 3rem;
 
-    .showcase-content {
-        text-align: center;
-        padding: 1rem;
-        margin: auto;
-        min-width: 50%;
-        padding: 3rem;
-
-        h5 {
-            font-weight: 100;
-        }
+    h5 {
+      font-weight: 100;
     }
+  }
 }
